--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Musicapp">
         <activity
+            android:name=".CheckSongActivity"
+            android:exported="false" />
+        <activity
             android:name=".ownMusic"
             android:exported="false" />
         <activity
