--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.android.application'
-    id 'com.google.gms.google-services'
+
 }
 
 android {
@@ -36,9 +36,12 @@ dependencies {
     implementation 'com.gauravk.audiovisualizer:audiovisualizer:0.9.2'
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:11.0.1'
     implementation 'com.google.firebase:firebase-auth:21.0.3'
+    implementation 'com.google.firebase:firebase-database:20.0.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:11.0.1'
-    //implementation 'com.github.ZeroOneZeroR:android_audio_mixer:v1.1'
+    implementation 'com.github.ZeroOneZeroR:android_audio_mixer:v1.1'
+    implementation 'com.github.piasy:AudioMixer:1.0.3'
+    implementation 'com.github.User:Repo:Version'
 }
