--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Musicapp">
         <activity
-            android:name=".CheckFinalSong"
+            android:name=".ListenFinalSong"
             android:exported="false" />
         <activity
             android:name=".Register"
