--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,10 @@
         android:theme="@style/Theme.Musicapp">
         <activity
             android:name=".ForgetPassword"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/SplashTheme">
+
+        </activity>
         <activity
             android:name=".ListenFinalSong"
             android:exported="false" />
@@ -41,7 +44,7 @@
             android:name=".OwnMusic"
             android:exported="false" />
         <activity
-            android:name=".YoutubeSearch"
+            android:name=".AlreadyRecordedTracks"
             android:exported="false" />
         <activity
             android:name=".Login"
