Splash Screen update

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Musicapp">
         <activity
+            android:name=".Login"
+            android:exported="false" />
+        <activity
             android:name=".FinalActivity"
             android:exported="false" />
         <activity
@@ -50,7 +53,7 @@
             android:name=".AlreadyRecordedTracks"
             android:exported="false" />
         <activity
-            android:name=".Login"
+            android:name=".SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
